fix menu on mobile

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1087,7 +1087,7 @@
     position: fixed;
     width: 100%;
     height: 0;
-    background: red;
+    background: #ffffff;
     z-index: 0;
     top: 0;
     left: 0;
